--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div id="heading">
+      <h1>Hello World!</h1>
+    </div>
   </body>
