--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
     <div id="heading">
       <h1>Hello World!</h1>
     </div>
+    <div id="content">
+    </div>
+    <script src="script.js"></script>
   </body>
