Logo added and minor style tweaks

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="em">
   <head>
     <link rel="stylesheet" href="style.css"/>
-    <title>My Personal Website</title>
+    <title>Lucas Duncan&reg;</title>
   </head>
   <body>
-    <div id="heading">
-      <h1>Hello World!</h1>
-    </div>
+    <section id="heading">
+      <div id="logo-title">
+        <figure id="logo">
+          <img 
+            src="https://i.pinimg.com/originals/4f/94/6b/4f946bbc6398192b2865c051fca8217d.png"
+            height="60px"
+          >
+        </figure>
+        <h1>Lucas Duncan</h1>
+      </div>
+    </section>
     <div id="content">
     </div>
     <script src="script.js"></script>
