Added interactive buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Lucas Duncan&reg;</title>
   </head>
   <body>
+    <!-- Begin Heading -->
     <section id="heading">
       <div id="logo-title">
         <figure id="logo">
@@ -16,7 +17,14 @@
         <h1>Lucas Duncan</h1>
       </div>
     </section>
-    <div id="content">
-    </div>
+    <!-- End Heading -->
+    <section id="content">
+      <div id="buttons-div">
+        <h1>Here's a button.</h1>
+        <p>
+          <button type="button" id="first-button">Click for more buttons</button>
+        </p>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
