Footer added, including links to github and linkedin

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="em">
   <head>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Lucas Duncan&reg;</title>
   </head>
   <body>
-    <!-- Begin Heading -->
-    <section id="heading">
+    <!-- Begin header -->
+    <section id="header">
       <div id="logo-title">
         <figure id="logo">
           <img 
@@ -17,7 +18,7 @@
         <h1>Lucas Duncan</h1>
       </div>
     </section>
-    <!-- End Heading -->
+    <!-- End header -->
     <section id="content">
       <div id="buttons-div">
         <h1>Here's a button.</h1>
@@ -26,5 +27,11 @@
         </p>
       </div>
     </section>
+    <footer id='footer'>
+      <span id='footer-links'>
+        <a href='https://github.com/lucasdonuts' class='footer-link'><i class='fa fa-github icon' style='font-size: 35px'></i></a>
+        <a href='https://www.linkedin.com/in/lucaswdunc/' class='footer-link'><i class='fa fa-linkedin icon' style='font-size: 35px'></i></a>
+      </span>
+    </footer>
     <script src="script.js"></script>
   </body>
